# CCSMTR

./: .gitignore  CCSMTR.pro  CMakeLists.txt  README.md
CCSMTR-master/: README.md
app/: turnouts.xml
docs/: serial-console.txt  setup-CKMA-windows-WSL.txt
docs/hardware/WD10-kuehn-digital/: poznamky.txt
hardware/WD10-kuehn-digital/: poznamky.txt
output/: rails.xml  turnouts.xml
output/layout/: layout.xml  routes.xml  turnouts_saved_ids.txt  zaloha-turnouts.txt
output/layout/menu_navestidla/: hlavne_navestidlo.xml  zriadovacie_navestidlo.xml
output/layout/menu_vyhybky/: vyhybky.xml
output/layout/navestidla/zriadovacie_navestidlo/: zriadovacie_navestidlo2
output/layout/turnouts/: tranform_turnouts
output/placement-symbols/: placement.xml
src/: main.cpp
src/LogicInstance/StationControlLogic/Actions/: RailsAction.h
src/LogicInstance/StationControlLogic/ClickableSvgItem/: ClickableSvgItem.cpp  ClickableSvgItem.h
src/LogicInstance/StationControlLogic/Rails/: Rails.cpp  Rails.h
src/LogicInstance/StationControlLogic/RailsAction/: RailsAction.cpp  RailsAction.h
src/LogicInstance/StationControlLogic/RightClick/: RightClick.cpp  RightClick.h  ui_RightClick.h  ui_RightClick.ui
src/LogicInstance/StationControlLogic/SVGHandleEvent/: SVGHandleEvent.cpp  SVGHandleEvent.h
src/MainScreen/MainWindow/: MainWindow.cpp  MainWindow.h  ui_MainWindow.h  ui_MainWindow.ui
src/MainScreen/StationControl/: StationControl.cpp  StationControl.h  ui_StationControl.ui  ui_stationControl.h
src/MainScreen/StationControl/SVGHandleEvent/: MouseEventHandler.cpp  MouseEventHandler.h  SVGHandleEvent.cpp  SVGHandleEvent.h
src/MainScreen/TabFolder/ConnectionTab/DCC-EX/: CommandQueue.h  DccEx.cpp  DccEx.h  ui_DccEx.h  ui_DccEx.ui
src/MainScreen/TabFolder/ConnectionTab/Power/: PowerWindow.cpp  PowerWindow.h  ui_PowerWindow.h  ui_PowerWindow.ui
src/MainScreen/TabFolder/ToolsTab/Throttle/: ThrottleWindow.cpp  ThrottleWindow.h  ui_ThrottleWindow.h  ui_ThrottleWindow.ui
src/Throttle/: ThrottleWindow.cpp  ThrottleWindow.h  ui_ThrottleWindow.h  ui_ThrottleWindow.ui
src/connection/DCC-EX/: dccEx.cpp  dccEx.h
src/connection/Intelibox_I/: intelibox_I.cpp  intelibox_I.h  ui_intelibox_I.h
src/mainWindow/: mainWindow.cpp  mainWindow.h  ui_mainwindow.h  ui_mainwindow.ui
src/station_controll/: ClickLineEvent.h  stationControll.cpp  stationControll.h  ui_stationControll.h  ui_stationControll.ui
src/station_controll/Actions/: RailsAction.cpp  RailsAction.h
src/station_controll/Interaction/: CustomLineItem.cpp  CustomLineItem.h  CustomTurnoutItem.cpp  CustomTurnoutItem.h  RailsAction.h  TurnoutAction.cpp  TurnoutAction.h
src/station_controll/Rails/: Rails.cpp  Rails.h
src/station_controll/RightClick/: RightClick.cpp  ui_RightClick.h
src/station_controll/TurnoutsRails/: rails.cpp  rails.h
src/tabFolder/ToolsTab/Throttle/: ThrottleWindow.h  ui_ThrottleWindow.h
src/tabFolder/connectionTab/DCC-EX/: dccEx.cpp  dccEx.h  ui_dccEx.h
src/tabFolder/connectionTab/Intelibox_I/: intelibox_I.cpp  intelibox_I.h  ui_intelibox_I.ui
src/tabFolder/connectionTab/Power/: PowerWindow.h  ui_PowerWindow.h
src/tabFolder/throttleTab/: ThrottleWindow.cpp  ThrottleWindow.h  ui_ThrottleWindow.ui
